--- a/views/articles/new.ejs
+++ b/views/articles/new.ejs
@@ -12,6 +12,7 @@
         <h1 class="mb-4">New Article</h1>
 
         <form action="/articles" method="POST">
+            <%# including the article's form to the new page%>
             <%- include('form_fields') %>
 
         </form>
