--- a/views/articles/form_fields.ejs
+++ b/views/articles/form_fields.ejs
@@ -1,14 +1,18 @@
 <div class="form-group">
     <label for="title">Title</label>
+    <%# adding the input box for the title%>
     <input required value="<%= article.title %>" type="text" name="title" id="title" class="form-control">
 </div>
 <div class="form-group">
     <label for="description">Description</label>
+    <%# adding the extendable input box for the description%>
     <textarea name="description" id="description" class="form-control"><%= article.description %></textarea>
 </div>
 <div class="form-group">
     <label for="markdown">Markdown</label>
+    <%# adding the extendable input box for the markdown%>
     <textarea required name="markdown" id="markdown" class="form-control"><%= article.markdown %></textarea>
 </div>
+<%# adding the buttons to cancel and to save%>
 <a href="/" class="btn btn-secondary">Cancel</a>
 <button type="submit" class="btn btn-primary">Save</button>
