--- a/views/articles/show.ejs
+++ b/views/articles/show.ejs
@@ -9,13 +9,22 @@
 </head>
 <body>
     <div class="container">
+        <%# showing the article's title in its own page%>
         <h1 class="mb-1"><%= article.title %></h1>
+        <%# showing the article's last modified date%>
         <div class="text-muted mb-2">
             <%= article.createdAt.toLocaleDateString() %>
         </div>
+
+        <%# adding the buttons to access the home page , to edit and to delete the article%>
         <a href="/" class="btn btn-secondary">All Articles</a>
         <a href="/articles/edit/<%= article.id %>" class="btn btn-info">Edit</a>
+        <form action="/articles/<%= article.id %>?_method=DELETE" method="POST" class="d-inline">
+            <button type="submit" class="btn btn-danger">Delete</button>
+        </form>
+        <%# adding the markdown with sanitized HTLM%>
         <div> <%- article.sanitizedHtlm %> </div>
+        
     </div>
 </body>
 </html>
